# django-networking

./: README.md  pyproject.toml  requirements.txt
configurare_retea/: db.sqlite3  manage.py
configurare_retea/configurare_retea/: asgi.py  settings.py  urls.py  wsgi.py
configurare_retea/echipamente/: admin.py  apps.py  forms.py  free_use.py  models.py  ssh_utils.py  urls.py  views.py
configurare_retea/echipamente/migrations/: 0001_initial.py  0002_rename_ip_adresa_echipaement_ip.py  0003_echipament_interfatarouter_router_delete_echipaement_and_more.py  0004_router_router.py
configurare_retea/echipamente/templates/: config_interfata.j2  editare_interfata.j2  sterge_interfata.j2
configurare_retea/echipamente/templates/echipamente/: adauga_echipament.html  configurare_interfata.html  configureaza_echipament.html  editare_interfata.html  lista_echipamente.html  lista_interfete.html
